@@ -933,3 +933,129 @@ w3po	http://purl.org/provenance#	20130208
 wn20	http://www.w3.org/2006/03/wn/wn20/	20130208
 xmls	http://www.w3.org/2001/XMLSchema#	20130208
 xro	http://purl.org/xro/ns#	20130208
+acm	http://www.rkbexplorer.com/ontologies/acm#	20130327
+agls	http://www.agls.gov.au/agls/terms/	20130327
+agrelon	http://d-nb.info/standards/elementset/agrelon.owl#	20130327
+aigp	http://swat.cse.lehigh.edu/resources/onto/aigp.owl#	20130327
+aos	http://rdf.muninn-project.org/ontologies/appearances#	20130327
+api	http://purl.org/linked-data/api/vocab#	20130327
+being	http://purl.org/ontomedia/ext/common/being#	20130327
+bf	http://bibframe.org/vocab/	20130327
+bif	http://www.openlinksw.com/schema/sparql/extensions#	20130327
+biotop	http://purl.org/biotop/biotop.owl#	20130327
+biro	http://purl.org/spar/biro/	20130327
+br	http://vocab.deri.ie/br#	20130327
+cb	http://cbasewrap.ontologycentral.com/vocab#	20130327
+cgov	http://reference.data.gov.uk/def/central-government/	20130327
+city	http://datos.localidata.com/def/City#	20130327
+cold	http://purl.org/configurationontology#	20130327
+coll	http://purl.org/co/	20130327
+comm	http://vocab.resc.info/communication#	20130327
+coun	http://www.daml.org/2001/09/countries/iso-3166-ont#	20130327
+cpa	http://www.ontologydesignpatterns.org/schemas/cpannotationschema.owl#	20130327
+crm	http://www.cidoc-crm.org/cidoc-crm/	20130327
+crsw	http://courseware.rkbexplorer.com/ontologies/courseware#	20130327
+csp	http://vocab.deri.ie/csp#	20130327
+ctorg	http://purl.org/ctic/infraestructuras/organizacion#	20130327
+dbtont	http://dbtropes.org/ont/	20130327
+dcite	http://purl.org/spar/datacite/	20130327
+dcndl	http://ndl.go.jp/dcndl/terms/	20130327
+deo	http://purl.org/spar/deo/	20130327
+disco	http://rdf-vocabulary.ddialliance.org/discovery#	20130327
+dita	http://purl.org/ditavoc/schema/	20130327
+dl	http://ontology.ip.rm.cnr.it/ontologies/DOLCE-Lite#	20130327
+doco	http://purl.org/spar/doco/	20130327
+dqm	http://purl.org/dqm-vocabulary/v1/dqm#	20130327
+dr	http://purl.org/swan/2.0/discourse-relationships/	20130327
+drm	http://vocab.data.gov/def/drm#	20130327
+ds	http://purl.org/ctic/dcat#	20130327
+dso	http://purl.org/ontology/dso#	20130327
+ecos	http://kmm.lboro.ac.uk/ecos/1.0#	20130327
+edgar	http://edgarwrap.ontologycentral.com/vocab/edgar#	20130327
+elec	http://purl.org/ctic/sector-publico/elecciones#	20130327
+emp	http://purl.org/ctic/empleo/oferta#	20130327
+ep	http://eprints.org/ontology/	20130327
+fcp	http://www.newmedialab.at/fcp/	20130327
+food	http://purl.org/foodontology#	20130327
+fowl	http://www.w3.org/TR/2003/PR-owl-guide-20031209/food#	20130327
+gadm	http://gadm.geovocab.org/ontology#	20130327
+gastro	http://www.ebsemantics.net/gastro#	20130327
+geod	http://vocab.lenka.no/geo-deling#	20130327
+geosp	http://rdf.geospecies.org/ont/geospecies#	20130327
+gnm	http://www.geonames.org/ontology/mappings/	20130327
+graffle	http://purl.org/twc/vocab/vsr/graffle#	20130327
+graves	http://rdf.muninn-project.org/ontologies/graves#	20130327
+gso	http://www.w3.org/2006/gen/ont#	20130327
+idemo	http://rdf.insee.fr/def/demo#	20130327
+infor	http://www.ontologydesignpatterns.org/cp/owl/informationrealization.owl#	20130327
+inno	http://purl.org/innovation/ns#	20130327
+iol	http://www.ontologydesignpatterns.org/ont/dul/IOLite.owl#	20130327
+itsmo	http://ontology.it/itsmo/v1#	20130327
+lcy	http://purl.org/vocab/lifecycle/schema#	20130327
+lh	http://vocab.inf.ed.ac.uk/library/holdings#	20130327
+lib	http://purl.org/library/	20130327
+lingvo	http://www.lingvoj.org/ontology#	20130327
+lmm1	http://www.ontologydesignpatterns.org/ont/lmm/LMM_L1.owl#	20130327
+lmm2	http://www.ontologydesignpatterns.org/ont/lmm/LMM_L2.owl#	20130327
+lsc	http://linkedscience.org/lsc/ns#	20130327
+mads	http://www.loc.gov/mads/rdf/v1#	20130327
+mds	http://doc.metalex.eu/id/	20130327
+meb	http://rdf.myexperiment.org/ontologies/base/	20130327
+mil	http://rdf.muninn-project.org/ontologies/military#	20130327
+mime	http://purl.org/NET/mediatypes/	20130327
+moac	http://observedchange.com/moac/ns#	20130327
+mrel	http://id.loc.gov/vocabulary/relators/	20130327
+msr	http://www.telegraphis.net/ontology/measurement/measurement#	20130327
+mvco	http://purl.oclc.org/NET/mvco.owl#	20130327
+ntag	http://ns.inria.fr/nicetag/2010/09/09/voc#	20130327
+nyt	http://data.nytimes.com/element/	20130327
+obsm	http://rdf.geospecies.org/methods/observationMethod#	20130327
+odapp	http://vocab.deri.ie/odapp#	20130327
+odpart	http://www.ontologydesignpatterns.org/cp/owl/participation.owl#	20130327
+odv	http://reference.data.gov.uk/def/organogram/	20130327
+oecc	http://www.oegov.org/core/owl/cc#	20130327
+ontopic	http://www.ontologydesignpatterns.org/ont/dul/ontopic.owl#	20130327
+opl	http://openlinksw.com/schema/attribution#	20130327
+opmo	http://openprovenance.org/model/opmo#	20130327
+oprovo	http://openprovenance.org/ontology#	20130327
+ordf	http://purl.org/NET/ordf/	20130327
+osadm	http://data.ordnancesurvey.co.uk/ontology/admingeo/	20130327
+osgeom	http://data.ordnancesurvey.co.uk/ontology/geometry/	20130327
+osp	http://data.lirmm.fr/ontologies/osp#	20130327
+osr	http://purl.org/ontomedia/core/space#	20130327
+osspr	http://data.ordnancesurvey.co.uk/ontology/spatialrelations/	20130327
+ostop	http://www.ordnancesurvey.co.uk/ontology/Topography/v0.1/Topography.owl#	20130327
+part	http://purl.org/vocab/participation/schema#	20130327
+passim	http://data.lirmm.fr/ontologies/passim#	20130327
+prvt	http://purl.org/net/provenance/types#	20130327
+ps	https://w3id.org/payswarm#	20130327
+pso	http://purl.org/spar/pso/	20130327
+ptop	http://www.ontotext.com/proton/protontop#	20130327
+pwo	http://purl.org/spar/pwo/	20130327
+quty	http://www.telegraphis.net/ontology/measurement/quantity#	20130327
+raul	http://vocab.deri.ie/raul#	20130327
+rdafrbr	http://rdvocab.info/uri/schema/FRBRentitiesRDA/	20130327
+rdag1	http://rdvocab.info/Elements/	20130327
+rdag3	http://rdvocab.info/ElementsGr3/	20130327
+rdarel	http://rdvocab.info/RDARelationshipsWEMI/	20130327
+s2s	http://escience.rpi.edu/ontology/sesf/s2s/4/0/	20130327
+sc	http://purl.org/science/owl/sciencecommons/	20130327
+sec	https://w3id.org/security#	20130327
+semio	http://www.lingvoj.org/semio#	20130327
+seq	http://www.ontologydesignpatterns.org/cp/owl/sequence.owl#	20130327
+situ	http://www.ontologydesignpatterns.org/cp/owl/situation.owl#	20130327
+snarm	http://rdf.myexperiment.org/ontologies/snarm/	20130327
+spt	http://spitfire-project.eu/ontology/ns/	20130327
+swpo	http://sw-portal.deri.org/ontologies/swportal#	20130327
+tao	http://vocab.deri.ie/tao#	20130327
+te	http://www.w3.org/2006/time-entry#	20130327
+tis	http://www.ontologydesignpatterns.org/cp/owl/timeindexedsituation.owl#	20130327
+trait	http://contextus.net/ontology/ontomedia/ext/common/trait#	20130327
+turismo	http://idi.fundacionctic.org/cruzar/turismo#	20130327
+tvc	http://www.essepuntato.it/2012/04/tvc/	20130327
+vocab	http://rdf.ontology2.com/vocab#	20130327
+vrank	http://purl.org/voc/vrank#	20130327
+wlo	http://purl.org/ontology/wo/	20130327
+wsl	http://www.wsmo.org/ns/wsmo-lite#	20130327
+xmp	http://ns.adobe.com/xap/1.0/	20130327
+zoomaterms	http://rdf.ebi.ac.uk/vocabulary/zooma/	20130327
