@@ -11,9 +11,10 @@ my $ns = RDF::NS->new('20111028');
 
 is $ns->PREFIX('http://www.w3.org/1999/02/22-rdf-syntax-ns#'), 'rdf', 'PREFIX';
 
-my @nslist = sort $ns->PREFIXES($dc);
-
-is_deeply \@nslist, [qw(dc dc11)], 'PREFIXES';
+my @nslist = $ns->PREFIXES($dc);
+ok ((grep { $_ eq 'dc' } @nslist), 'PREFIXES has dc');
+ok ((grep { $_ eq 'dc11' } @nslist), 'PREFIXES has dc11');
+is @nslist, 2, 'PREFIXES returns two';
 
 my $rev = $ns->REVERSE;
 
